--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.6"
 # command to install dependencies
 install:
-  - sudo bash build_intall.sh
+  - bash build_intall.sh
 # command to run tests
 script:
   - pytest unittesting_scripts.py
