--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
   - bash build_intall.sh
 # command to run tests
 script:
-  - export PATH="$HOME/miniconda/bin:$PATH"; source activate intel;conda list; mpiexec -n 1 pytest unittesting_scripts.py
+  - export PATH="$HOME/miniconda/bin:$PATH"; source activate intel;conda list; pytest unittesting_scripts.py
