--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ install:
   - bash build_intall.sh
 # command to run tests
 script:
-  - export PATH="$HOME/miniconda/bin:$PATH"; source activate intel;conda list; pytest unittesting_scripts.py
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - source activate intel
+  - pytest code_testing/test*.py
